--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -1,1 +1,22 @@
 header_tests=Tests
+header_login_reg=Login | Registration
+header_exit=Logout
+header_admin=Admin
+logReg_login=Login
+logReg_password=Password
+logReg_imNew=I don't have an account
+logReg_entrance=Login
+logReg_next=Next
+main_subject=Subject
+main_sort_up=Ascending
+main_sort_down=Descending
+main_view_tests=Show in page
+main_sort_by_name=By name
+main_sort_by_hard=By difficulty
+main_sort_by_count_question=By number of question
+main_apply=Apply
+main_min=min
+error_authorization=Authorization error
+error_authorization_log=Wrong login or password
+error_registration=Error registration
+error_registration_log=The data is incorrect or the user already exists
