--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -20,3 +20,31 @@ error_authorization=Authorization error
 error_authorization_log=Wrong login or password
 error_registration=Error registration
 error_registration_log=The data is incorrect or the user already exists
+error_profile_password=Passwords do not match
+profile_username=Username
+profile_change_username=Change username
+profile_password=Password
+profile_again_password=Again password
+profile_change_password=Change password
+profile_repass=Transmission
+profile_test_hide=Test was removed or hidden by the creator
+test_end=Complete the test
+test_result_1=Your result for the test
+test_result_2=is equal
+editor_test_name=Title of the test
+editor_test_subject=Subject area
+editor_test_is_public=Shared access
+editor_test_time=Test Time
+editor_test_save=Save the test
+editor_question_save=Save the question
+editor_question_delete=Delete question
+editor_question_add=Add a question
+editor_answer_points= Number of points
+editor_question_name=Question
+admin_create_test=Create test
+admin_find_user=Find user
+admin_login=Login
+admin_username=Username
+admin_profile=Profile
+admin_block=Block user
+admin_un_block=Unblock user
