--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -49,3 +49,5 @@ admin_profile=Profile
 admin_block=Block user
 admin_un_block=Unblock user
 admin_delete=Delete test
+error_blocked=Login error
+error_blocked_log=User locked
